# flash-attn-one-cuda

./: .gitignore  CMakeLists.txt  README.md  autotuner.py  flash_attn.cpp  flash_attn_kernel.cu  flash_attn_profile.ncu-rep  pyproject.toml  setup.py  setup_env.sh  test_flash.py  test_flash_attn.py  wrapper.cpp
profiles/: flash_attn_profile.ncu-rep
src/flash_attn/: __init__.py  flash_attn_kernel.cu
src/flash_attn_one_cuda/: __init__.py
